<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.davidmoten</groupId>
        <artifactId>sonatype-parent</artifactId>
        <version>0.1</version>
    </parent>

    <artifactId>ppk</artifactId>
    <version>0.1.7-SNAPSHOT</version>

    <name>${project.artifactId}</name>
    <description>Public private key encryption</description>
    <packaging>jar</packaging>

    <url>http://github.com/davidmoten/ppk</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.target>1.8</maven.compiler.target>
        <scm.url>scm:git:https://github.com/davidmoten/ppk.git</scm.url>
    </properties>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <ciManagement>
        <system>Travis</system>
        <url>https://travis-ci.org/davidmoten/ppk</url>
    </ciManagement>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/davidmoten/ppk/issues</url>
    </issueManagement>

    <inceptionYear>2015</inceptionYear>
    <developers>
        <developer>
            <id>dave</id>
            <name>Dave Moten</name>
            <url>https://github.com/davidmoten/</url>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+10</timezone>
        </developer>
    </developers>

    <scm>
        <connection>${scm.url}</connection>
        <developerConnection>${scm.url}</developerConnection>
        <url>${scm.url}</url>
        <tag>0.1.5</tag>
    </scm>

    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>18.0</version>
        </dependency>

        <dependency>
            <groupId>net.jcip</groupId>
            <artifactId>jcip-annotations</artifactId>
            <version>1.0</version>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>${maven.compiler.target}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
